hospital side deployement

--- a/src/Pages/Dashboard/Dashboard-Login/DLogin.css
+++ b/src/Pages/Dashboard/Dashboard-Login/DLogin.css
@@ -24,7 +24,7 @@
   width: 35%;
   border-radius: 10px;
   color: white;
-  background-color: #2de736;
+  background-color: #199A8E;
 }
 
 .Profileimg {
