--- a/src/Pages/Dashboard/Main-Dashboard/AllPages/Admin/CSS/Add_Ambu.css
+++ b/src/Pages/Dashboard/Main-Dashboard/AllPages/Admin/CSS/Add_Ambu.css
@@ -23,7 +23,7 @@
   height: 10rem;
   padding: 13px;
   border-radius: 10px;
-  background-color: #c3c7ff75;
+  background-color: #199A8E;
   border: none;
   box-shadow: 0px 0px 7px -3px black;
   transition: 0.3s;
