--- a/src/Pages/Dashboard/Main-Dashboard/AllPages/Admin/CSS/Add_Doctor.css
+++ b/src/Pages/Dashboard/Main-Dashboard/AllPages/Admin/CSS/Add_Doctor.css
@@ -122,13 +122,14 @@ input::-webkit-inner-spin-button {
   font-size: 1.3rem;
   border-radius: 5px;
   border: none;
-  background: #ffb195;
+  background: #199A8E;
   display: block;
   margin: auto;
   margin-top: 2rem;
   font-weight: bold;
   cursor: pointer;
   transition: 0.4s;
+  padding: 10px;
 }
 
 .formsubmitbutton:hover {
